# cpp_argument_parser

./: CMakeLists.txt  README.md
include/: argumentparser.h
scripts/: run_tests.sh
src/: argumentparser.cpp  main.cpp
tests/: expected_output_0.txt  expected_output_1.txt  expected_output_10.txt  expected_output_11.txt  expected_output_12.txt  expected_output_13.txt  expected_output_14.txt  expected_output_15.txt  expected_output_16.txt  expected_output_17.txt  expected_output_2.txt  expected_output_3.txt  expected_output_4.txt  expected_output_5.txt  expected_output_7.txt  expected_output_8.txt  expected_output_9.txt
